[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stp_simulator"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "networkx==2.5.1",
    "netaddr==1.3.0",
    "pydot==3.0.2",
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["stp_simulator*"]
